--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 .vscode/launch.json
 .vscode/tasks.json
+
+/temp
+
 /.awcache
 /.tscache
 public/polyfill
@@ -18,8 +21,6 @@ public/polyfill
 /junit.xml
 
 # production
-/build
-/dist
 /storybook-static
 /Maskbook.*.zip
 
