--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@holoflows/kit": "https://github.com/DimensionDev/holoflows-kit",
+    "@magic-works/webextension-systemjs": "^0.0.1",
     "@material-ui/core": "4.9.12",
     "@material-ui/icons": "4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.51",
@@ -108,6 +109,7 @@
     "@babel/core": "^7.9.6",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@magic-works/ttypescript-browser-like-import-transformer": "^2.1.1",
     "@nice-labs/git-flow-init": "^1.0.1",
     "@nice-labs/git-rev": "^3.3.1",
     "@sinonjs/text-encoding": "^0.7.1",
@@ -124,9 +126,11 @@
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/expect-puppeteer": "^4.4.1",
+    "@types/gulp": "^4.0.6",
     "@types/jest": "^25.2.1",
     "@types/jest-environment-puppeteer": "^4.3.1",
     "@types/puppeteer": "^2.0.1",
+    "@types/through2": "^2.0.35",
     "@types/webpack": "^4.41.11",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
@@ -147,6 +151,7 @@
     "fake-indexeddb": "^3.0.0",
     "fork-ts-checker-notifier-webpack-plugin": "^2.0.0",
     "fork-ts-checker-webpack-plugin": "^4.1.3",
+    "gulp": "^4.0.2",
     "html-webpack-plugin": "^4.2.1",
     "jest": "^25.5.2",
     "jest-environment-jsdom-fourteen": "^1.0.1",
@@ -162,13 +167,16 @@
     "react-devtools": "^4.6.0",
     "react-docgen-typescript-loader": "^3.7.2",
     "react-test-renderer": "^16.13.1",
+    "snowpack": "^2.0.0-beta.20",
     "storybook-addon-designs": "^5.2.0",
     "storybook-addon-i18n": "^5.1.13",
     "terser-webpack-plugin": "^2.3.6",
+    "through2": "^3.0.1",
     "ts-jest": "^25.4.0",
     "ts-loader": "^7.0.2",
     "ts-morph": "^7.0.3",
     "ts-node": "^8.9.1",
+    "ttypescript": "^1.5.10",
     "type-coverage": "^2.4.2",
     "typechain": "^1.0.5",
     "typechain-target-web3-v1": "^1.0.4",
