--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "classnames": "^2.2.6",
     "clipboard-polyfill": "^3.0.1",
     "d3": "^5.16.0",
+    "date-fns": "^2.16.1",
     "elliptic": "^6.5.3",
     "eth-contract-metadata": "^1.15.0",
     "fuse.js": "^6.4.1",
